# zero-to-production-with-smtp

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml  local.yml
migrations/: 20220922034555_create_subscriptions_table.sql  20220922044727_alter_subscription_table_name_to_subscriptions.sql  20221223144523_make_status_not_null_in_subscriptions.sql  20221223152940_create_subscription_tokens_table.sql  20230314193427_create_users_table.sql  20230314195546_set_users_table_username_column_to_not_null.sql  20230404020148_seed_user.sql  20230502045044_create_newsletter_issues_table.sql  20230502045737_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  smtp_server.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/middlewares/: auth.rs
src/routes/: mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  newsletter.html  post.rs
src/routes/admin/password/: get.rs  password_reset.html  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
